--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,10 +6,32 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag  'https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css' %>
+    <%= javascript_include_tag 'https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js' %>
+    <%= javascript_include_tag 'https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js' %>
+    <%= stylesheet_link_tag 'application', 'https://fonts.googleapis.com/css?family=Raleway:400,700' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+
   </head>
 
   <body>
-    <%= yield %>
+    <!-- Side navigation -->
+    <div class="sidebar">
+      <p style="font-weight: 900;font-size: 2.5em;text-transform: uppercase;color: #22747b;">
+        <%= link_to "Tumblr", root_path %>
+      </p>
+      <%= link_to "Post Feed", root_path %>
+      <%= link_to "Create Post", new_post_path %>
+      <%= link_to "About", root_path %>
+      <%= link_to "Log In", root_path %>
+    </div>
+    <div class="content">
+      <%= yield %>
+    </div>
+
+    <% flash.each do |name, msg| %>
+      <%= content_tag(:div, msg, class: "alert") %>
+    <% end %>
+
   </body>
 </html>
