--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -9,6 +9,12 @@
   height: 100%;
   overflow: auto;
   padding: 7em 0 0 0;
+  .category{
+    font-weight: 900;
+    font-size: 2.5em;
+    text-transform: uppercase;
+    color: #22747b;
+  }
 }
 
 /* Sidebar links */
@@ -45,9 +51,10 @@ div.content {
     width: 100%;
     height: auto;
     position: relative;
+    padding-top: 0;
   }
   .sidebar a {float: left;}
-  div.content {margin-left: 0;}
+  div.content {margin-left: 0; }
 }
 
 /* On screens that are less than 400px, display the bar vertically, instead of horizontally */
@@ -62,7 +69,8 @@ div.content {
   padding: 1.9em;
   border-bottom: 1px solid #d6dce0;
   .title {
-    margin: 2px;
+    //margin: 2px;
+    margin: .5em 0 0 0;
     a {
       font-weight: 500;
       text-decoration: none;
@@ -74,11 +82,11 @@ div.content {
     }
   }
   .date_and_author {
-    color: #22487b;
+    color: #9eafba;
     margin: .5em 0 0 0;
   }
   .body {
-    color: #d3d3d3;
+    color: black;
     margin: .5em 0 0 0;
   }
 }
@@ -146,6 +154,13 @@ div.content {
 
 #page_wrapper {
   padding: 3em;
+  .title {
+    font-weight: 500;
+    text-decoration: none;
+    color: #529FCD;
+    font-size: 2.5em;
+    margin-bottom: 1.5em;
+  }
   #profile_image {
     width: 300px;
     float: left;
