--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
   <body>
     <!-- Side navigation -->
     <div class="sidebar">
-      <p style="font-weight: 900;font-size: 2.5em;text-transform: uppercase;color: #22747b;">
+      <p class="category">
         <%= link_to "Tumblr", root_path %>
       </p>
       <%= link_to "Post Feed", root_path %>
