--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,17 +1,17 @@
-<div id="page_wrapper">
-  <h1>Make Something!</h1>
+<div id="page_wrapper" class="form-group">
+  <h1 class="title">Make Something!</h1>
 
   <%= form_for :post, url: posts_path do |f| %>
-    <p>
+    <div class="form-group">
       <%= f.label :title %> <br>
-      <%= f.text_field :title %>
-    </p>
-    <p>
+      <%= f.text_field :title, :class => "form-control" %>
+    </div>
+    <div class="form-group">
       <%= f.label :body %> <br>
-      <%= f.text_area :body %>
-    </p>
-    <button class="btn btn-default">
-      <%= f.submit %>
-    </button>
+      <%= f.text_area :body, :class => "form-control"%>
+    </div>
+      <button class="btn btn-primary" >Save Post
+        <% f.submit %>
+      </button>
   <% end %>
  </div>
