Edit and Delete posts

--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,4 +1,4 @@
 <div id="page_wrapper" class="form-group">
-  <h1 class="title">Make Something!</h1>
+  <h1 class="title">Edit Post</h1>
   <%= render "form" %>
- </div>
+</div>
