--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
       </p>
       <%= link_to "Post Feed", root_path %>
       <%= link_to "Create Post", new_post_path %>
-      <%= link_to "About", root_path %>
+      <%= link_to "About", about_path %>
       <%= link_to "Log In", root_path %>
     </div>
     <div class="content">
