--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,10 +1,12 @@
 <div class="comment clearfix">
-    <div class="comment_content">
-      <p class="comment_name"><em><%= comment.name %></em></p>
-      <p class="comment_body"><%= comment.body %></p>
-      <p class="comment_title"><%= time_ago_in_words(comment.created_at) %> ago </p>
+  <div class="comment_content">
+    <p class="comment_name"><em><%= comment.name %></em></p>
+    <p class="comment_body"><%= comment.body %></p>
+    <p class="comment_title"><%= time_ago_in_words(comment.created_at) %> ago </p>
   </div>
   <p>
-    <%= link_to 'Delete Comment', [comment.post, comment], method: :delete, class: "button", data: {confirm: "Are you sure you want to delete?"} %>
+    <% if user_signed_in? %>
+      <%= link_to 'Delete Comment', [comment.post, comment], method: :delete, class: "button", data: {confirm: "Are you sure you want to delete?"} %>
+    <% end %>
   </p>
 </div>
