--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,17 +21,20 @@
         <%= link_to "Tumblr", root_path %>
       </p>
       <%= link_to "Post Feed", root_path %>
-      <%= link_to "Create Post", new_post_path %>
+      <% if user_signed_in? %>
+        <%= link_to "Create Post", new_post_path %>
+        <%= link_to "Log Out", destroy_user_session_path, method: :delete %>
+      <% else %>
+        <%= link_to "Log In", new_user_session_path %>
+      <% end %>
       <%= link_to "About", about_path %>
-      <%= link_to "Log In", root_path %>
     </div>
     <div class="content">
+      <% flash.each do |name, msg| %>
+        <%= content_tag(:div, msg, class: "alert") %>
+      <% end %>
       <%= yield %>
     </div>
-
-    <% flash.each do |name, msg| %>
-      <%= content_tag(:div, msg, class: "alert") %>
-    <% end %>
 
   </body>
 </html>
