--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,6 @@
 <div id="page_wrapper">
   <div id="profile_image">
-    <%= image_tag "/assets/profile.jpeg" %>
+    <%= image_tag "profile.jpeg" %>
   </div>
   <div id="content">
     <h2>It's Mr. Sticky Figure</h2>
